# topology-aware-comm-compression

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke.yml
configs/: benchmark_grid.toml  demo_scenarios.toml  sensor_fusion_baseline.toml
docs/: metrics.md  research_notes.md  roadmap.md
results/: REPORT.md  dashboard.html
scripts/: export_markdown_report.py  generate_dashboard.py  run_benchmark.py  run_demo_suite.py  run_smoke.py
src/tacc/: __init__.py  cli.py  config.py
src/tacc/comm/: __init__.py  compression.py  topology.py
src/tacc/envs/: __init__.py  sensor_fusion.py
src/tacc/models/: __init__.py
src/tacc/reporting/: __init__.py  dashboard.py  findings.py  markdown.py
src/tacc/training/: __init__.py  benchmark.py  runner.py
tests/: conftest.py  test_findings.py  test_smoke.py
