[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacc-marl"
version = "0.1.0"
description = "Topology-aware communication compression scaffold for multi-agent research."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Wang Bo" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
